# roleman

./: .gitignore  Cargo.toml  README.md  bot.py  common.js  config-example.toml  config-example.yaml  config.json  example_config.json  index.js  package-lock.json  package.json
cogs/: about.py  cogTemplate.txt  cogUtils.py  help.py
cogs/role/: addRole.py  joinrole.py  reactionRole.py  roleInfo.py
cogs/utils/: about.py  cogUtils.py  help.py
commands/: about.js  add-role.js  clean.js  help.js  jetfuel.js  join-roles.js  list-role-holders.js  prefix.js  reload.js  remove-role.js  resolve-role.js  robotnik.js  self-role-setup-old.js  self-role-setup.js  self-roles-old.js  self-roles.js  shiansc.js
db/: db.js  serverConf.js
lib/: __init__.py  common.py  role.py
src/: commands.rs  config.rs  error.rs  lib.rs  main.rs
src/commands/: misc.rs  role.rs
