[package]
name = "roleman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.5.5"
serde = { version = "1.0.167", features = ["derive", "serde_derive"] }
serde_derive = "1.0.167"
tokio = { version = "1.29.1", features = ["rt-multi-thread", "tracing"] }
toml = "0.7.6"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
